--- a/index.html
+++ b/index.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Venta de viajes</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <ul>
-        <li><a>Barcelona</a></li>
-        <li><a>Roma</a></li>
-        <li><a>París</a></li>
-        <li><a>Londres</a></li>
+      <li><a>Barcelona</a></li>
+      <li><a>Roma</a></li>
+      <li><a>París</a></li>
+      <li><a>Londres</a></li>
     </ul>
 
     <div class="contenedor">
-        <h2 id="titulo">Bienvenido a nuestra web.</h2>
-        <h3 id="subtitulo">Elija su destino.</h3>
-        <p id="parrafo">Compre los mejores paquetes de viaje en nuestra empresa.</p>
-        <h4 id="precio"></h4>
+      <h2 id="titulo">Bienvenido a nuestra web.</h2>
+      <h3 id="subtitulo">Elija su destino.</h3>
+      <p id="parrafo">
+        Compre los mejores paquetes de viaje en nuestra empresa.
+      </p>
+      <h4 id="precio"></h4>
     </div>
-</body>
-<script type="module" src="script.js"></script>
+  </body>
+  <script type="module" src="script.js"></script>
 </html>
